--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,24 @@ jobs:
         with:
           name: xyzpoc-code-coverage-report
           path: ./htmlcov/*
-        
+  docker-build-and-push:
+    needs: generate-html-coverage-report
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Save branch name
+        run:  echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          tags: | 
+            streetplaya/xyzpoc:${{ env.BRANCH }}-latest
+          push: true
