Updated ingress and README.md notes.

--- a/chart/templates/xyzpoc-ingress.yaml
+++ b/chart/templates/xyzpoc-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: xyzpoc-ingress
   namespace: {{ .Release.Namespace }}
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
