--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,4 +2,4 @@ defaultNameSpace: "xyzpoc"
 replicaCount: 1
 containerPort: 5010
 appLogLevel: "DEBUG"
-image: docker.io/streetplaya/xyzpoc:main-latest
+image: docker.io/streetplaya/xyzpoc:v0.0.1
