--- a/.github/workflows/docker-publish-version.yml
+++ b/.github/workflows/docker-publish-version.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-push-image:
     runs-on: "ubuntu-latest"
+    if: endsWith(github.event.base_ref, 'main') == true
 
     steps:
       - name: "Checkout"
